--- a/main.html
+++ b/main.html
@@ -9,6 +9,42 @@
 </head>
 <body>
     <!-- add table here -->
+	<table  border="">
+	<thead  style="background:sandybrown">
+		<tr>
+			<th>Name</th>
+			<th>Place</th>
+			<th>Animal</th>
+			<th>Thing</th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr>
+			<td>Tarun</td>
+			<td>Turkey</td>
+			<td>Tiger</td>
+			<td>toy</td>
+		</tr>
+		<tr  style="background:greenyellow">
+			<td>Farooque</td>
+			<td>Faizabad</td>
+			<td>Tox</td>
+			<td>fire</td>
+		</tr>
+		<tr>
+			<td>Saima</td>
+			<td>Saudi</td>
+			<td>Sheep</td>
+			<td>Spain</td>
+		</tr>
+		<tr style="background:greenyellow">
+			<td>fateen</td>
+			<td>firozabad</td>
+			<td>falcon</td>
+			<td>fan</td>
+		</tr>
+	</tbody>
+	</table>
 
         
 </body>
